ros2_ws/log/build_2024-11-27_13-43-15/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/geo_tools.py", line 173
    </kml>"""
          ^
SyntaxError: unterminated triple-quoted string literal (detected at line 173)

